<resources>
    <string name="app_name">Andres Rodriguez Inventory App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="request_permission">Request Permission</string>
    <string name="notification_permission_jist">Allow this app to communicate with your SMS messanger app to get notifications when inventory is running low.</string>
    <string name="add_item">Add item</string>
</resources>